# ZBeam

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Kconfig  LICENSE  README.md  native_sim.overlay  prj.conf
boards/: esp32c3_devkitm.overlay  esp32c3_supermini.conf  esp32c3_supermini.overlay
docs/: anduril-features.md  architecture.md  config.md  fix_perms.sh  gap_analysis.md  hardware_validation_tracking.md  kconfig_dts_guide.md  lessons_learned.md  main_breathing_demo.c  memory-footprint.md  tasks.md  zephyr_debugging.md  zero-cross.md
docs/proposals/: multi_channel_pwm.md
dts/bindings/led/: zanduril,aux-leds.yaml
include/: aux_manager.h  batt_check.h  channel_manager.h  fsm_engine.h  fsm_worker.h  key_map.h  multi_tap_input.h  nvs_manager.h  pm_manager.h  pwm_ramp.h  ramp_sine_13bit_g28.h  ramp_table.h  ramp_table_13bit.h  ramp_table_13bit_g28.h  safety_monitor.h  storage_manager.h  thermal_manager.h  ui_actions.h  zbeam_msg.h
lib/: aux_manager.c  fsm_engine.c  fsm_worker.c  multi_tap_input.c  n_tap_input_handler.c  nvs_manager.c  pm_manager.c  safety_monitor.c  storage_manager.c  thermal_manager.c
scripts/: generate_ramp_table.py
src/: batt_check.c  channel_manager.c  key_map.c  main.c  pwm_ramp_dma.c  pwm_ramp_esp32.c  pwm_ramp_generic.c  ui_actions.c  ui_advanced.c  ui_simple.c
tests/aux_logic/: CMakeLists.txt  testcase.yaml
tests/aux_logic/src/: main.c
tests/batt_check/: CMakeLists.txt  testcase.yaml
tests/batt_check/src/: main.c
tests/fsm_core/: CMakeLists.txt  prj.conf  testcase.yaml
tests/fsm_core/src/: main.c
tests/fsm_nvs/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/fsm_nvs/boards/: native_sim.overlay
tests/fsm_nvs/src/: main.c  test_core_events.c  test_multi_tap.c
tests/input_logic/: CMakeLists.txt  prj.conf  testcase.yaml
tests/input_logic/src/: main.c
tests/nvs_logic/: CMakeLists.txt  prj.conf  testcase.yaml
tests/nvs_logic/src/: main.c
tests/strobe_logic/: CMakeLists.txt  prj.conf  testcase.yaml
tests/strobe_logic/src/: main.c
tests/thermal_logic/: CMakeLists.txt  testcase.yaml
tests/thermal_logic/src/: main.c
